- fix and improve pom configs - implemented unari operator for tensors, standard implementation