@@ -50,6 +50,37 @@
         <module>rapaio-jmh</module>
     </modules>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <release>${maven.compiler.release}</release>
+                    <compilerArgs>
+                        <compilerArg>--enable-preview</compilerArg>
+                        <compilerArg>--add-modules</compilerArg>
+                        <compilerArg>jdk.incubator.vector,jdk.incubator.concurrent</compilerArg>
+                    </compilerArgs>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <reuseForks>true</reuseForks>
+                    <!--suppress UnresolvedMavenProperty -->
+                    <argLine>--enable-preview --add-modules jdk.incubator.vector,jdk.incubator.concurrent</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
+
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
